@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false

'left to right direction

skinparam classAttributeIconSize 0

hide circle
hide methods

class Client {
    name
    descriptions
    tax number
    address
    email address
    phone number
    password
}

class Order{
    descriptions
    client
    Announcement
    RealEstateAgent
}


class SaleAnnouncement{
    Property
    descriptions
    RealStateAgent
    cost
}

class Employee{
    name
    descriptions
    tax number
    address
    email address
    phone number
    password
}
class  RealEstateAgent extends Employee{

}

Client "1" -- "1..*" Order : makes
SaleAnnouncement "1" <-- "*" Order : has
RealEstateAgent "1" --> "*" Order : accepts/rejects

}

@enduml
